# WorkDot

./: .gitignore  README.md
AiChatApi/: AiChatApi.csproj  AiChatApi.sln  Program.cs  appsettings.json
AiChatApi/Controllers/: SpeechController.cs
AiChatApi/Kernel/: SKFunctions.cs
AiChatApi/Models/: ErrorViewModel.cs
AiChatApi/Properties/: launchSettings.json
AiChatApi/Views/: _ViewImports.cshtml
AiChatApi/wwwroot/: index.html
Graphics/: SquareLine_Project.sll  SquareLine_Project.spj
M5Stack/: .gitignore  Readme.md  platformio.ini
M5Stack/src/: BasicHttpClient.cpp  Main.cpp  Secrets.h
M5Stack/src/Graphics/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Chat.c  ui_Splash.c  ui_img_172201545.c  ui_img_2128174856.c  ui_img_button1_png.c  ui_img_ellipse_6_png.c  ui_img_record_small_png.c  ui_img_workdot_png.c
WorkDot.Api/: .gitignore  Program.cs  WorkDot.Api.csproj  WorkDot.sln  appsettings.json
WorkDot.Api/Controllers/: SpeechController.cs
WorkDot.Api/Kernel/: KernelFunctions.cs
WorkDot.Api/Models/: EmailDetails.cs  GraphModel.cs  PlanModel.cs  Prompts.cs  WidgetModel.cs
WorkDot.Api/Services/: GraphService.cs
WorkDot.Api/wwwroot/: index.html
WorkDot.Desktop/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  WorkDot.Desktop.csproj  _Imports.razor  appsetting.json
WorkDot.Desktop/Models/: ChatMessageModel.cs  (+4 more)
WorkDot.M5Stack/: .gitignore
WorkDot.Services/: ServiceCollectionExtensions.cs  WorkDot.Services.csproj
WorkDot.SquareLine/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
(+104 files in other folders)
