SET(SOURCES ui_Splash.c
    ui_Record.c
    ui_Chat.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_flexibility_12969792_1_png.c
    ui_img_ellipse_4_png.c
    ui_img_ellipse_5_png.c
    ui_img_ellipse_6_png.c
    ui_img_workdot_png.c
    ui_img_microphone_10307974_1_png.c
    ui_img_button1_png.c
    ui_img_2128171783.c
    ui_img_button2_png.c
    ui_img_1682391902.c
    ui_img_setting_png.c
    ui_img_record_small_png.c
    ui_img_ellipse_4_png.c
    ui_img_ellipse_5_png.c
    ui_img_ellipse_6_png.c
    ui_img_flexibility_12969792_1_png.c)

add_library(ui ${SOURCES})
